--- a/web/.htaccess
+++ b/web/.htaccess
@@ -3,11 +3,13 @@
     RewriteEngine On
 
     # Explicitly disable rewriting for front controllers
-    RewriteRule ^index.php - [L]
+   #RewriteRule ^index.php - [L]
 
     #RewriteRule ^bundles/(.*)$ /web/bundles/$1  [QSA,L]
 
-    RewriteCond %{REQUEST_FILENAME} !-f
+    #RewriteCond %{REQUEST_FILENAME} !-f
 
-    RewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
+    #RewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
+     RewriteCond %{REQUEST_FILENAME} !-f
+     RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
