--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,8 @@ local.properties
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
 ### NetBeans template
+nbproject/project.properties
+nbproject/project.xml
 nbproject/private/
 build/
 nbbuild/
