--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,6 +1,7 @@
 <IfModule mod_rewrite.c>
     Options +FollowSymlinks
     RewriteEngine On
-     RewriteCond %{REQUEST_FILENAME} !-f
-     RewriteRule ^(.*)$ index.php [QSA,L]
+    RewriteRule ^(vendor|assets)($|/) - [L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
