--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,6 +1,9 @@
 <IfModule mod_rewrite.c>
     Options +FollowSymlinks
     RewriteEngine On
-     RewriteCond %{REQUEST_FILENAME} !-f
-     RewriteRule ^(.*)$ index.php [QSA,L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^assets - [L,NC]
+    RewriteRule ^vendor - [L,NC]
+    RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
+
