--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,9 @@ crashlytics-build.properties
 fabric.properties
 ### Composer template
 composer.phar
+vendor/*
 /vendor
+
 
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
